# loot-and-roam

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build-ci-image.sh
.forgejo/workflows/: docker-dev-image.yaml  rust-unit-tests.yaml
.github/workflows/: unit-tests.yml
asset_workspace/: README.md
asset_workspace/blender/placeholder_shipo/: placeholder ship.blend
assets/: README.md
assets/debug/: README.md  placeholder ship.blend  placeholder ship.glb
docker/: Dockerfile
docker/headless/: Dockerfile
examples/: construct-test-minimal.rs  construct-test-watchtower.rs  perlin.rs  soft-cube-buoyancy.rs  soft-cube-collision.rs  soft-cube.rs  terragen.rs  terrain-basic.rs  terrain-collision.rs  terramesh.rs  terrarender.rs
extra/: roadmap.md
extra/design/: constructs.md  ui.md
extra/design.logseq/logseq/.recycle/: pages_Gameplay___Gamemodes___Gameplay loop.md
extra/design.logseq/pages/: Affiliation.md  Attitude Mode.md  Design Root.md  Gamemodes.md  Gamemodes___Campaign mode.md  Gamemodes___Free Play Mode.md  Gamemodes___Pirate Mode.md  Gameplay.md  Gameplay___Gameplay loop.md  Gameplay___Gameplay loop___Island raid.md  Gameplay___Play scopes___World map.md  Harbor.md  NPC.md  NPC___AI.md  NPC___Chase.md  NPC___Stakeout.md  Personality Traits.md  Play scopes.md  Play scopes___Intermission view.md  Play scopes___Island view.md  Rumor.md  Tavern.md  applied research.md
extra/graphs/: physics.dot
src/: lib.rs  main.rs
src/app/: camera.rs  mod.rs
src/app/renderer/: camera.rs  commands.rs  mod.rs  object.rs  objrender.rs  sky.rs  terrarender.rs
src/app/renderer/ui/: mod.rs
src/app/state/: ingame.rs  mainmenu.rs  mod.rs
src/common/: config.rs  construct.rs  intermission.rs  inventory.rs  math.rs  mod.rs  physics.rs  simul.rs  state.rs  timer.rs
src/common/construct/: action.rs  install.rs  part.rs  slot.rs
src/common/inventory/: mod.rs
src/common/makeup/: mod.rs
src/common/physics/: base.rs  collision.rs  forces.rs  mod.rs  spring.rs  torque.rs  volume.rs  water.rs
src/common/physics/elementary/: mod.rs  volumes.rs
src/common/physics/subsystems/: elementary.rs  mod.rs
src/common/scene/: init.rs  mod.rs
src/common/shipmakeup/: mod.rs
src/common/shipmakeup/parts/: mod.rs
src/common/terrain/: base.rs  buffer.rs  cache.rs  collision.rs  generator.rs  mod.rs  noise.rs
src/common/terrain/nodes/: combinators.rs  mod.rs
src/server/: mod.rs
tests/: terrain_noise.rs
