[package]
name = "loot-and-roam"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
enum_dispatch = "0.3.13"
itertools = "0.14.0"
serde = "1.0.218"
slotmap = { version = "1.0.7", features = ["serde"] }
tokio = { version = "1.43.0", features = ["time", "rt-multi-thread", "macros"] }
ultraviolet = "0.9.2"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
assertables = "9.5.0"
