cargo-features = ["codegen-backend"]

[package]
name = "loot-and-roam"
version = "0.1.0"
edition = "2021"
authors = ["GameCircular team"] # Please see AUTHORS.md

[dependencies]
bevy = "0.15.2"
derive_builder = "0.20.2"
enum_dispatch = "0.3.13"
itertools = "0.14.0"
rand = "0.9.0"
range-ext = "0.3.0"
serde = "1.0.218"
slotmap = { version = "1.0.7", features = ["serde"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
assertables = "9.5.0"
bevy_image_export = "0.12.0"

# --- Bevy-recommended tweaks

[profile.dev]
# Enable Cranelift codegen
codegen-backend = "cranelift"
# Enable a small amount of optimization in the dev profile.
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

